--- a/barcaw.html
+++ b/barcaw.html
@@ -133,7 +133,7 @@
       </div>
       <div class="legend-info">
         <h4>Xavi Hernández</h4>
-        <span class="legend-years">1998-2015 (Player), 2021-present (Manager)</span>
+        <span class="legend-years">1998-2015 (Player), 2021-2024(Manager)</span>
         <ul class="legend-stats">
           <li>867 appearances (2nd all-time)</li>
           <li>8x La Liga winner</li>
