--- a/products.html
+++ b/products.html
@@ -42,6 +42,30 @@
           <button class="add-to-cart">Add to Cart</button>
           </div>
         </a>
+          <a href="realw.html" class="product-link">
+          <div class="product-item" data-club="real" data-type="away">
+          <img src="realthird.png" alt="Real Madrid Third Jersey">
+          <h3>Real Madrid Third Jersey 2024/25</h3>
+          <div class="price">$89.99</div>
+          <button class="add-to-cart">Add to Cart</button>
+          </div>
+        </a>
+        <a href="realw.html" class="product-link">
+          <div class="product-item" data-club="real" data-type="away">
+          <img src="realretro2.png" alt="Mens Away Bring Back 99/00 Jersey Black">
+          <h3>Mens Away Bring Back 99/00 Jersey Black</h3>
+          <div class="price">$89.99</div>
+          <button class="add-to-cart">Add to Cart</button>
+          </div>
+        </a>
+        <a href="realw.html" class="product-link">
+          <div class="product-item" data-club="real" data-type="away">
+          <img src="realretro1.png" alt="Mens Away Bring Back 99/00 Jersey White">
+          <h3>Mens Away Bring Back 99/00 Jersey White</h3>
+          <div class="price">$89.99</div>
+          <button class="add-to-cart">Add to Cart</button>
+          </div>
+        </a>
       </div>
     </div>
      <div class="product-category">
