--- a/realw.html
+++ b/realw.html
@@ -104,6 +104,67 @@
         </div>
       </div>
     </div>
+
+    <div class="product-row">
+      <div class="product-detail">
+        <img src="realthird.png" alt="Real Madrid Third Jersey">
+        <div class="product-info">
+          <h2>Third Jersey</h2>
+          <div class="price">$89.99</div>
+          <p>Official Real Madrid Third jersey for the 2024/25 season. Made with high-quality materials for optimal performance.</p>
+          <div class="size-selector">
+            <label for="away-size">Size:</label>
+            <select id="away-size">
+              <option value="S">Small</option>
+              <option value="M">Medium</option>
+              <option value="L">Large</option>
+              <option value="XL">XL</option>
+            </select>
+          </div>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+      <div class="product-row">
+      <div class="product-detail">
+        <img src="realretro1.png" alt="Mens Away Bring Back 99/00 Jersey White">
+        <div class="product-info">
+          <h2>Retro Jersey</h2>
+          <div class="price">$89.99</div>
+          <p>Official Real Madrid Mens Away Bring Back 99/00 Jersey White. Made with high-quality materials for optimal performance.</p>
+          <div class="size-selector">
+            <label for="away-size">Size:</label>
+            <select id="away-size">
+              <option value="S">Small</option>
+              <option value="M">Medium</option>
+              <option value="L">Large</option>
+              <option value="XL">XL</option>
+            </select>
+          </div>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+      <div class="product-row">
+      <div class="product-detail">
+        <img src="realretro2.png" alt="Mens Away Bring Back 99/00 Jersey Black">
+        <div class="product-info">
+          <h2>Retro Jersey</h2>
+          <div class="price">$89.99</div>
+          <p>Official Real Madrid Mens Away Bring Back 99/00 Jersey Black. Made with high-quality materials for optimal performance.</p>
+          <div class="size-selector">
+            <label for="away-size">Size:</label>
+            <select id="away-size">
+              <option value="S">Small</option>
+              <option value="M">Medium</option>
+              <option value="L">Large</option>
+              <option value="XL">XL</option>
+            </select>
+          </div>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+      </div>
+    </div>
   </section>
 
 <section class="club-legacy">
